--- a/src/style/casestudyIntro.scss
+++ b/src/style/casestudyIntro.scss
@@ -1,13 +1,28 @@
 @import "./global.scss";
 
 .casestudyIntro {
-  .casestudyIntro-background {
+  .casestudyIntro-innerbox {
     width: 100%;
     height: 100vh;
-    padding-top: 10vw;
-    background: url("../assets/bg.jpg") no-repeat center center;
-    background-size: cover;
     overflow: hidden;
+    position: relative;
+    z-index: 2;
+
+    > div {
+      margin-top: 20vh;
+      position: relative;
+      z-index: 2;
+    }
+  }
+
+  .casestudyIntro__background {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
 
   .casestudyIntro__index {
