--- a/src/style/casestudyIntro.scss
+++ b/src/style/casestudyIntro.scss
@@ -1,44 +1,21 @@
 @import "./global.scss";
 
 .casestudyIntro {
-  .casestudyIntro-innerbox {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
-    z-index: 2;
-
-    > div {
-      margin-top: 20vh;
-      position: relative;
-      z-index: 2;
-    }
-  }
-
-  .casestudyIntro__background {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
+  width: $width;
+  max-width: $max-width;
+  margin: 0 auto;
+  padding-top: 15vh;
 
   .casestudyIntro__index {
     display: block;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     font-size: 1.6rem;
-    color: white;
-    text-align: center;
   }
 
   .casestudyIntro__title {
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
     font-size: 6rem;
-    color: white;
     font-weight: 600;
-    text-align: center;
     line-height: 1;
 
     @media screen and (max-width: 769px) {
@@ -46,48 +23,16 @@
     }
   }
 
-  .casestudyIntro__description {
-    width: 50vw;
-    margin: 0 auto;
-    margin-bottom: 10rem;
-
-    font-size: 1.4rem;
-    color: white;
-    font-weight: 300;
-    text-align: center;
-  }
-
-  .casestudyIntro__img {
-    width: 30vw;
-    max-width: 500px;
-    min-width: 300px;
-    height: 700px;
-    margin: 0 auto;
-    overflow: hidden;
-    background: black;
-
-    img {
-      display: block;
-      width: 100%;
-    }
-  }
-
-  .casestudyIntro__info-wrapper {
-    width: $width;
-    max-width: $max-width;
-    margin: 5vw auto 0;
-  }
-
   .casestudyIntro__info {
-    // width: 50%;
-    // display: flex;
-    // gap: 20px;
-
-    width: fit-content;
-    margin: 0 auto;
-
     p {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
+      display: grid;
+      grid-template-columns: 60px 1fr;
+      align-items: center;
+
+      @media screen and (max-width: 600px) {
+        display: block;
+      }
 
       span {
         display: block;
