--- a/src/style/projectControl.scss
+++ b/src/style/projectControl.scss
@@ -1,9 +1,7 @@
 @import "./global.scss";
 
-.casestudyControl {
-  width: $width;
-  max-width: $max-width;
-  margin: 5vw auto 0;
+.projectControl {
+  margin-top: 5vw;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1rem 0 10vw;
   display: flex;
