--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -4,16 +4,27 @@
   margin-bottom: 15vw;
 
   .contact__title {
-    margin-bottom: 2rem;
-    font-size: 4.8rem;
+    margin-bottom: 8px;
+    font-size: 3.6rem;
     font-weight: 600;
+    text-align: center;
+
+    @media screen and (max-width: 769px) {
+      font-size: 2.4rem;
+    }
+  }
+
+  .contact__text {
+    margin-bottom: 4rem;
+    font-size: 1.4rem;
+    font-weight: 300;
     text-align: center;
   }
 
   .contact__item {
     width: fit-content;
     margin: 0 auto 10px;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 300;
   }
 }
