--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -4,7 +4,7 @@
   // width: calc(100vw - 10vw * 2);
   width: $width;
   max-width: $max-width;
-  padding: 10px 0;
+  padding: 30px 0 10px;
   display: flex;
   justify-content: space-between;
   position: absolute;
@@ -13,18 +13,9 @@
   z-index: 99;
 
   .header__logo {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     font-weight: 600;
-  }
-
-  .header__nav {
-    display: flex;
-    justify-content: space-between;
-
-    a {
-      display: block;
-      margin-left: 20px;
-      font-size: 1.8rem;
-    }
+    letter-spacing: 1px;
+    line-height: 1.1;
   }
 }
