--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -2,7 +2,7 @@
 
 .intro {
   width: 100%;
-  height: 80vh;
+  height: 75vh;
   position: relative;
 
   .intro__innerbox {
@@ -15,22 +15,21 @@
   }
 
   .intro__title {
-    margin-bottom: 30px;
-    font-size: 10rem;
-    font-weight: 600;
+    margin-bottom: 2rem;
+    font-size: 6rem;
+    font-weight: 900;
     text-align: center;
 
-    @media screen and (max-width: 1200px) {
-      font-size: 8rem;
+    @media screen and (max-width: 1000px) {
+      font-size: 6.6vw;
     }
 
     @media screen and (max-width: 769px) {
-      font-size: 11vw;
+      // font-size: 11vw;
     }
   }
 
   .intro__text {
-    margin-top: 30px;
     font-size: 1.6rem;
     text-align: center;
     font-weight: 300;
