--- a/src/style/project.scss
+++ b/src/style/project.scss
@@ -33,6 +33,10 @@
 
   .project__about {
     width: 70%;
+
+    @media screen and (max-width: 769px) {
+      width: 100%;
+    }
   }
 
   .project__introImg {
@@ -42,6 +46,10 @@
   .project__purpose {
     width: 80%;
     margin-bottom: 10rem;
+
+    @media screen and (max-width: 769px) {
+      width: 100%;
+    }
   }
 
   .project__stack {
@@ -69,6 +77,22 @@
 
     .project__stack__text {
       width: 50%;
+    }
+
+    @media screen and (max-width: 769px) {
+      flex-direction: column-reverse;
+
+      .project__stack__icon {
+        width: 100%;
+
+        div {
+          all: unset;
+        }
+      }
+
+      .project__stack__text {
+        width: 100%;
+      }
     }
   }
 
