--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -28,16 +28,14 @@ address {
 }
 
 /* common */
-// @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
 
 html {
-  // font-family: "Inter", sans-serif;
   font-family: "Open Sans", sans-serif;
   font-size: 11.6px;
+  font-weight: 300;
   scroll-behavior: smooth;
 }
 
@@ -55,7 +53,6 @@ h4 {
 
 // variables
 $width: 84vw;
-// $max-width: 1025px;
 $max-width: 1120px;
 
 #container {
