--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,10 +1,9 @@
 @import "./global.scss";
 
 .header {
-  // width: calc(100vw - 10vw * 2);
   width: $width;
   max-width: $max-width;
-  padding: 30px 0 10px;
+  padding: 30px 0 15px;
   display: flex;
   justify-content: space-between;
   position: absolute;
@@ -12,10 +11,31 @@
   transform: translateX(-50%);
   z-index: 99;
 
-  .header__logo {
-    font-size: 1.4rem;
-    font-weight: 600;
-    letter-spacing: 1px;
-    line-height: 1.1;
+  // border-bottom: 1px solid black;
+
+  .header__title {
+    width: fit-content;
+    display: flex;
+    align-items: center;
+
+    .header__title__icon {
+      width: 18px;
+      height: 18px;
+      background: black;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+  }
+
+  .header__title__text,
+  .header__location {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2;
+  }
+
+  .header__location {
+    text-align: right;
   }
 }
