--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -2,40 +2,52 @@
 
 .intro {
   width: 100%;
-  height: 75vh;
+  min-height: 80vh;
   position: relative;
 
-  .intro__innerbox {
-    width: 100%;
-    height: fit-content;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .intro__title {
+    padding-top: calc(100px + 10vh);
+    margin-bottom: 4rem;
+
+    > p {
+      font-size: 8.8rem;
+      line-height: 1.2;
+
+      &.intro__title__position {
+        text-align: right;
+      }
+
+      @media screen and (max-width: 1240px) {
+        font-size: 8vw;
+      }
+
+      @media screen and (max-width: 769px) {
+        font-size: 11vw;
+        font-weight: 900;
+      }
+    }
   }
 
-  .intro__title {
-    margin-bottom: 2rem;
-    font-size: 6rem;
-    font-weight: 900;
-    text-align: center;
-
-    @media screen and (max-width: 1000px) {
-      font-size: 6.6vw;
-    }
-
-    @media screen and (max-width: 769px) {
-      // font-size: 11vw;
-    }
+  .intro__innerbox {
+    width: fit-content;
+    margin-left: auto;
   }
 
   .intro__text {
+    margin-bottom: 2rem;
     font-size: 1.6rem;
-    text-align: center;
-    font-weight: 300;
 
     @media screen and (max-width: 769px) {
       font-size: 1.4rem;
     }
+  }
+
+  .intro__email,
+  .intro__linkedIn {
+    width: fit-content;
+    height: fit-content;
+    margin-left: auto;
+    font-size: 1.4rem;
+    color: rgb(156, 156, 156);
   }
 }
