docs: Add blog project assests

--- a/src/style/project.scss
+++ b/src/style/project.scss
@@ -25,6 +25,8 @@
   .img {
     display: block;
     width: 100%;
+    min-height: 40px;
+    background: gray;
     margin-bottom: 6rem;
     box-shadow: 0px 5px 10px 5px rgba(190, 190, 190, 0.5);
     border-radius: 5px;
