--- a/src/style/work.scss
+++ b/src/style/work.scss
@@ -48,7 +48,7 @@
         width: 100%;
         height: fit-content;
         overflow: hidden;
-        background: black;
+        background: gray;
 
         .work__item__img {
           display: block;
