--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -44,6 +44,7 @@
 
   .intro__email,
   .intro__linkedIn {
+    display: block;
     width: fit-content;
     height: fit-content;
     margin-left: auto;
