--- a/src/style/skills.scss
+++ b/src/style/skills.scss
@@ -2,7 +2,6 @@
 
 .skills {
   .skills__title {
-    // margin-bottom: 40px;
     margin-bottom: 8px;
     font-size: 3.6rem;
     font-weight: 600;
@@ -22,31 +21,26 @@
   .skills__list {
     width: fit-content;
     margin: 0 auto;
-    // overflow: scroll;
 
     li {
       width: fit-content;
       margin: 0 auto;
-      // display: flex;
 
       span {
         display: inline-block;
         margin: 5px;
-        padding: 10px;
+        padding: 10px 15px;
         border: 1px solid black;
         border-radius: 30px;
         font-size: 1.4rem;
       }
 
-      @media screen and (max-width: 510px) {
+      @media screen and (max-width: 440px) {
         span {
           margin: 3px;
+          padding: 10px;
           font-size: 1.2rem;
         }
-      }
-
-      @media screen and (max-width: 440px) {
-        margin: 0;
       }
     }
   }
