--- a/src/style/copyright.scss
+++ b/src/style/copyright.scss
@@ -8,4 +8,8 @@
   font-size: 1.1rem;
   color: rgba(0, 0, 0, 0.3);
   text-align: center;
+
+  @media (prefers-color-scheme: dark) {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
