--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -42,6 +42,13 @@ html {
 body {
   width: 100vw;
   overflow-x: hidden;
+  background: white;
+  color: black;
+
+  @media (prefers-color-scheme: dark) {
+    background: rgb(20, 20, 20);
+    color: white;
+  }
 }
 
 h1,
