--- a/src/style/project.scss
+++ b/src/style/project.scss
@@ -28,8 +28,12 @@
     min-height: 40px;
     background: gray;
     margin-bottom: 6rem;
-    box-shadow: 0px 5px 10px 5px rgba(190, 190, 190, 0.5);
+    box-shadow: 0 0 20px rgba(190, 190, 190, 0.5);
     border-radius: 5px;
+
+    @media (prefers-color-scheme: dark) {
+      box-shadow: none;
+    }
   }
 
   .project__about {
