docs: Fix contents

--- a/src/style/experience.scss
+++ b/src/style/experience.scss
@@ -41,14 +41,15 @@
   }
 
   .experience__company {
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     font-size: 2.8rem;
     line-height: 0.8;
   }
 
   .experience__position {
     margin-bottom: 16px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    font-style: italic;
   }
 
   .experience__summary {
